# train-game

./: .gitignore  Cargo.toml  flake.nix  shell.nix  wasm-build.sh
.github/workflows/: check-fmt-and-push.sh  rust-clippy.yml  rust.yml
assets/: Caboose.blend  Caboose.blend1  Farm.blend  GoblinAmbushStop.blend  GoblinAmbushStop.blend1  Ground.blend  Ground.blend1  Human.blend  Human.blend1  Locomotive.blend  Locomotive.blend1  Stop.blend  Stop.blend1  TrainTemplate.blend  TrainTemplate.blend1
src/: build_plugin.rs  camera_plugin.rs  control_panel_plugin.rs  debug_plugin.rs  human.rs  main.rs  main_menu.rs  resources_plugin.rs  ui_state.rs
src/build_plugin/: building_menus.rs  mod.rs
src/goblins/: mod.rs
src/train_plugin/: mod.rs  train_speed_ui.rs
src/world_plugin/: goblin_spawner.rs  mod.rs  progress_bar_plugin.rs  stop_plugin.rs
