[package]
name = "train-game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bevy_asset_loader = "0.23.0"
lerp = "0.5.0"
rand = { version = "0.9.1", features = ["alloc", "std"], default-features = false }
rand_chacha = "0.9.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

